# PerscoBingo

./: .gitignore  README.md  package-lock.json  package.json  vue.config.js  wordlist
backend/: config.ini  dist  main.py  pyproject.toml
backend/perscobingo/: state_manager.py
backend/perscobingo/api/: server.py  uvicorn.py
backend/perscobingo/api/routers/: admin_router.py  user_router.py
backend/perscobingo/handlers/: db_handler.py
backend/perscobingo/utils/: log_handling.py  parameters.py
backend/web/: index.html
backend/web/static/css/: app.429abb14.css  app.95b4db69.css  app.b5688c54.css
backend/web/static/js/: app.46549d53.js.map  app.5029d8d4.js  app.5029d8d4.js.map  app.607453ad.js  app.dd21df2c.js  app.fa3e8ae5.js  app.fa3e8ae5.js.map
public/: index.html
src/: App.vue  main.js
src/assets/: shared.scss
src/components/home/: Block.vue  BlockArray.vue  Footer.vue  Header.vue
src/js/: store.js
src/router/: index.js
src/views/: Home.vue
web/: index.html
web/static/css/: app.5806f483.css
web/static/js/: app.46549d53.js  app.607453ad.js.map  app.daf809a6.js  app.daf809a6.js.map  app.dd21df2c.js.map  chunk-vendors.fdb7c2dc.js  chunk-vendors.fdb7c2dc.js.map
